Fix navbar wrapping to a new line
when 992px <= width <= 1200px

--- a/nyaa/static/css/main.css
+++ b/nyaa/static/css/main.css
@@ -160,7 +160,7 @@ table.torrent-list tbody .comments i {
 	-ms-flex-order: 3;
 	order: 3;
 	width: 99%;
-	padding-right: 4em;
+	padding-right: 1em;
 	border-left: 0;
 }
 
@@ -380,28 +380,28 @@ h6:hover .header-anchor {
 	display: inline-block;
 }
 
-@media (max-width: 991px){
+@media (max-width: 991px) {
 	.panel-body .col-md-5 {
 		margin-left: 20px;
 		margin-bottom: 10px;
 	}
-	
+
 	#navFilter-criteria > .bootstrap-select:first-child > button {
 		/* !important is used here to override the programmatically added style on element */
 		border-top-left-radius: 0 !important;
 		border-bottom-left-radius: 0 !important;
 	}
-	
+
 	.search-container > .search-bar {
 		margin-top: 15px;
 	}
 }
 
-@media (min-width: 992px){
+@media (min-width: 992px) {
 	.panel-body .col-md-5 {
 		word-wrap: break-word;
 	}
-	
+
 	.search-btn {
 		top: 0;
 		width: auto;
@@ -409,5 +409,12 @@ h6:hover .header-anchor {
 
 	.bootstrap-select > button {
 		margin-top: auto;
+	}
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+	/* Collapse navbar search form so it doesn't wrap to a new line */
+	.search-container {
+		width: 400px;
 	}
 }
